Fix overflow issue for main content
Scrollbar was visible on the button, this fix
solves the issue

--- a/src/app/components/kit/kit.scss
+++ b/src/app/components/kit/kit.scss
@@ -15,6 +15,8 @@
   width:100%;
   margin-top: 376px;
 
+  overflow: hidden;
+
   section.overlay{
     width:100%;
     height:100%;
